# cosmic2

./: CMakeLists.txt  baseline_filter.py  common.py  cosmic.py  diskIO.py  fccd.py  generate_raw_cxi.py  preprocess.py  preprocessor.py  setup.py  stefano_filter.py
configuration/: default.json
cosmicp/: __init__.py  common.py  cosmic.py  cosmic_run.py  descramble.cu  diskIO.py  fccd.py  fccd_cupy.py  fccd_jax.py  fccd_numpy.py  nexus_io.py  options.py  preprocessor.py  preprocessor_cupy.py  preprocessor_jax.py  preprocessor_numpy.py  udpframereader.c
recipes/: singularity_deps
scratch/: animate.py  fccd.py  fccdv0.py  filter_frames.py  scratch.py  scratch_1.py  test.sh
scripts/: sim_no_control.py  udp_read_to_zmq.py  zmq_sub_preprocess.py
test/: test_descrambler.cpp  test_pipeline.py
